--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # IDE
 .idea
+.idea/*.xml
+.idea/*.iml
+*.iml
 
 # production
 /build
@@ -20,6 +23,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
